login-register fixing

--- a/src/index.html
+++ b/src/index.html
@@ -8,21 +8,14 @@
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#4CAF50" />
     <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="apple-mobile-web-app-title" content="Story App" />
     <meta name="msapplication-TileColor" content="#4CAF50" />
     <meta name="msapplication-config" content="/icons/browserconfig.xml" />
-    <meta name="description" content="Share your moments, connect with others, and create lasting memories through stories." />
     
-    <!-- PWA Icons -->
-    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="shortcut icon" href="favicon.png">
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="/icons/icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/icon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icons/icon-72x72.png">
     
     <title>Story App</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
