--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,12 @@
             <!-- Navigation items will be dynamically inserted by templates.js -->
           </ul>
         </nav>
-        <button id="drawer-button" class="drawer-button">☰</button>
+        <div class="header-controls">
+          <button id="notification-toggle" class="notification-toggle" title="Toggle Notifications">
+            <i class="fas fa-bell"></i>
+          </button>
+          <button id="drawer-button" class="drawer-button">☰</button>
+        </div>
       </div>
     </header>
 
